Fixing minor styling bugs and adding styles to increase writings readability

--- a/scss/_about-skills.scss
+++ b/scss/_about-skills.scss
@@ -37,6 +37,20 @@
 		}
 		i {
 			font-size: 2.8em;
+			width: 17%;
+
+			@media #{$medium-up} {
+				width: 20%;
+			}
+		}
+		p {
+			width: 83%;
+			padding-left: 20px;
+
+			@media #{$medium-up} {
+				width: 80%;
+				padding-left: 5px;
+			}
 		}
 	}
 } 
