--- a/scss/_writing-footer.scss
+++ b/scss/_writing-footer.scss
@@ -5,6 +5,11 @@
 
 #footer {
 	@extend %footer;
+
+	.content {
+		padding-right: 12%;
+		padding-left: 12%;
+	}
 	
 	h4 {
 		border-top: 1px solid grey;
