--- a/scss/_writing-hero.scss
+++ b/scss/_writing-hero.scss
@@ -24,13 +24,10 @@
 		.content {
 			position: absolute;
 			bottom: 10%;
+			padding: 0 12%;
 
 			.text {
 				width: 100%;
-
-				@media #{$medium-up} {
-					width: 70%;
-				}
 				
 				h1, p {
 					color: $white;
