--- a/scss/_writing-image-slider.scss
+++ b/scss/_writing-image-slider.scss
@@ -24,7 +24,12 @@
 			background: rgba($black,.7);
 		}
 	}
-
+	
+	.content {
+		@media #{$medium-up} {
+			padding: 0 10%;
+		}
+	}
 	.orbit-slides-container {
 		// Force slider to be specific height
 		height: 320px;
@@ -35,7 +40,7 @@
 			height: 400px;
 		}
 		@media #{$large-up} {
-			height: 500px;
+			height: 415px;
 		}
 
 		li {
@@ -68,7 +73,7 @@
 					width: 25%;
 					background: inherit;
 					color: $black;
-					padding: 10em 2.5em 0 1.5em;
+					padding: 8em 2.5em 0 1.5em;
 				}
 			}
 		}
