--- a/scss/_writing-image.scss
+++ b/scss/_writing-image.scss
@@ -9,6 +9,12 @@
 	margin: 3em 0 2em;
 	background: $lightGrey;
 
+	.content {
+		padding: 0;
+		@media #{$medium-up} {
+			padding: 0 10%;
+		}
+	}
 	img {
 		width: 100%;
 	}
